--- a/frontend/users.html
+++ b/frontend/users.html
@@ -51,7 +51,7 @@
                 <ion-icon name="search-outline" class="searchIcon"></ion-icon>
             </div>
             <div class="profileSection">
-                <ion-icon name="notifications-outline" class="notifications"></ion-icon>
+                <span class="notificationArea"><ion-icon name="notifications-outline" class="notifications"></ion-icon><p>12</p></span>
                 <img class="profile" id="profile-image">
                 
             </div>
